--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "./dist/emmet.es.js",
   "types": "./dist/src/index.d.ts",
   "scripts": {
+    "build-vscode-snippets": "node ./vscode-snippets/combine.cjs",
     "build": "rollup -c",
     "watch": "rollup -wc",
     "test": "mocha",
